<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.hao</groupId>
    <artifactId>HaoVSort</artifactId>
    <version>1.2.1</version>
    <name>HaoVSort</name>
    <description>Bukkit plugin that visualize sorting algorithm in Minecraft.</description>
    <url>https://github.com/karnhao/HaoVSort</url>
    <packaging>jar</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>
    <licenses>
        <license>
            <name>MIT License</name>
            <url>http://www.opensource.org/licenses/mit-license.php</url>
        </license>
    </licenses>
    <build>
        <resources>
            <resource>
                <filtering>true</filtering>
                <targetPath>.</targetPath>
                <directory>${basedir}/src/main/java/resources</directory>
                <includes>
                    <include>**/*.yml</include>
                </includes>
            </resource>
            <resource>
                <filtering>false</filtering>
                <targetPath>./resources/songs</targetPath>
                <directory>${basedir}/src/main/java/resources/songs</directory>
            </resource>
        </resources>
    </build>
    <repositories>
        <!-- This adds the Spigot Maven repository to the build -->
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
    </repositories>
    <dependencies>
        <!--This adds the Spigot API artifact to the build -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.19-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.koca2000</groupId>
            <artifactId>NoteBlockAPI</artifactId>
            <version>1.6.1</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>
    <developers>
        <developer>
            <email>karn0888422952@gmail.com</email>
            <name>Mr. Sittipat Tepsutar</name>
            <organization>Hao.Inc</organization>
            <timezone>
                UTC+07:00
            </timezone>
        </developer>
    </developers>
    <scm>
        <connection>scm:git:git://github.com/karnhao/HaoVSort.git</connection>
        <developerConnection>scm:git:ssh://github.com/karnhao/HaoVSort.git</developerConnection>
        <url>http://github.com/karnhao/HaoVSort</url>
    </scm>
</project>
